added configs, updated environmentm added readme

--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -18,15 +18,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
-      "TensorFlow version: 1.10.0\n",
       "TensorFlow version: 1.10.0\n"
      ]
     },
@@ -34,25 +25,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2019-06-11 12:52:15.015761: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 12:53:32.275878: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 12:54:50.018989: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 12:55:57.283042: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 12:57:13.637694: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 12:58:24.156380: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 12:59:48.569926: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 13:01:11.839131: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 13:02:36.246083: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n",
-      "2019-06-11 13:03:50.725345: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n"
+      "2019-06-13 13:50:01.800073: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n"
      ]
     }
    ],
    "source": [
     "%%bash\n",
-    "export WD=~/Simulation_result\n",
-    "export CONF=$(pwd)/Exp_conf\n",
+    "export WD=./Simulation_result\n",
+    "export CONF=$(pwd)/Exp_conf_test\n",
     "export SCRIPT=$(pwd)/simulation.py\n",
     "\n",
+    "mkdir ./Experiment_out\n",
     "mkdir $WD\n",
     "cd $WD\n",
     "\n",
@@ -69,7 +52,7 @@
    "outputs": [],
    "source": [
     "%%R\n",
-    "experiments <- list.dirs(path = \"~/Simulation_result\", full.names = TRUE, recursive = FALSE)\n",
+    "experiments <- list.dirs(path = \"./Simulation_result\", full.names = TRUE, recursive = FALSE)\n",
     "\n",
     "datalist <- c()\n",
     "x <- c(\"Experiment\", \"Pattern\", \"Peak\", \"Path\")\n",
@@ -95,16 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "mkdir ~/experiment_out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -205,10 +178,6 @@
       "\n",
       "\n",
       "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Need help getting started? Try the cookbook for R:\n",
-      "http://www.cookbook-r.com/Graphs/\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
       "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Loading required package: SummarizedExperiment\n",
       "\n",
       "  warnings.warn(x, RRuntimeWarning)\n",
@@ -273,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -348,8 +317,129 @@
       "  warnings.warn(x, RRuntimeWarning)\n",
       "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_3\n",
       "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_4\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_4\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_7\n",
+      "\n",
       "  warnings.warn(x, RRuntimeWarning)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_8 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: preparing Output...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: pre-computing Kernel matrix...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 610.5867\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 607.4047\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 612.3545\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 615.89\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -361,7 +451,7 @@
     "samplesheet <- data.frame(list(modnames, modnames, rep(1, 10), rep('Ctr', 10), rep(1,10), rep('macs', 10)))\n",
     "colnames(samplesheet)<-c('SampleID', 'Tissue', 'Factor', 'Condition', 'Replicate', 'PeakCaller')\n",
     "\n",
-    "write.csv(samplesheet,'~/experiment_out/SampleSheet.csv', row.names=FALSE)\n",
+    "write.csv(samplesheet,'./Experiment_out/SampleSheet.csv', row.names=FALSE)\n",
     "for (replica in replicas){\n",
     "    replica_df <- subset(datadf, Experiment == replica)\n",
     "    peaks <- as.list(unique(replica_df[['Peak']]))\n",
@@ -370,7 +460,7 @@
     "    for (pattern in patterns) { \n",
     "        ExperimentData <- list(genome='none',\n",
     "                       dataDir=\".\",\n",
-    "                       sampleSheet =\"~/experiment_out/SampleSheet.csv\")\n",
+    "                       sampleSheet =\"./Experiment_out/SampleSheet.csv\")\n",
     "        MetaData <- list('ExpData' = ExperimentData)\n",
     "        MMD <- DBAmmd(MetaData)\n",
     "\n",
@@ -386,8 +476,8 @@
     "        MMD@MetaData <- Meta\n",
     "        ################################   \n",
     "        pattern_df = subset(replica_df, Pattern == pattern)\n",
-    "        dir.create(paste0(\"~/experiment_out\",\"/\",replica))\n",
-    "        dirname <- paste0(\"~/experiment_out\",\"/\",replica,\"/\",pattern)\n",
+    "        dir.create(paste0(\"./Experiment_out\",\"/\",replica))\n",
+    "        dirname <- paste0(\"./Experiment_out\",\"/\",replica,\"/\",pattern)\n",
     "        dir.create(dirname)\n",
     "                \n",
     "        read_data = by(data = pattern_df$Path,\n",
@@ -427,20 +517,33 @@
     "                       \n",
     "        MMD@Reads <- list('Center'=readList)\n",
     "        MMD@RawTotalCounts = rawCounts\n",
-    "        MMD <- compDists(MMD,dist.method='MMD2')\n",
-    "        dists <-MMD@DISTs$MMD2\n",
-    "        write.csv(dists, file = paste0(dirname, \"/dists.csv\"))\n",
+    "        MMD <- compDists(MMD,dist.method='MMD2', background_intensity=0.2)\n",
+    "        MMD <- compDists(MMD,dist.method='MMD')\n",
+    "        dists <-MMD@DISTs$MMD\n",
+    "        dists2 <-MMD@DISTs$MMD2       \n",
+    "        write.csv(dists, file = paste0(dirname, \"/MMD_old_dists.csv\"))\n",
+    "        write.csv(dists2, file = paste0(dirname, \"/MMD_dists.csv\"))\n",
     "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] 100\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%R\n",
     "print(length(peaks))"
