Removed mmdiff files
MMDiff can now be checked out from a spearate repository

--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -33,7 +33,7 @@
     "%%bash\n",
     "export WD=./Simulation_result\n",
     "export CONF=$(pwd)/Exp_conf_test\n",
-    "export SCRIPT=$(pwd)/simulation.py\n",
+    "export SCRIPT=$(pwd)/../Simulation Script/simulation.py\n",
     "\n",
     "mkdir ./Experiment_out\n",
     "mkdir $WD\n",
