renamed folder, updated gitignore

--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -11,21 +11,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorFlow version: 1.10.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2019-06-13 13:50:01.800073: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n"
+      "Process is terminated.\n"
      ]
     }
    ],
@@ -33,7 +26,7 @@
     "%%bash\n",
     "export WD=./Simulation_result\n",
     "export CONF=$(pwd)/Exp_conf_test\n",
-    "export SCRIPT=$(pwd)/../Simulation Script/simulation.py\n",
+    "export SCRIPT=$(pwd)/../Simulation_Script/simulation.py\n",
     "\n",
     "mkdir ./Experiment_out\n",
     "mkdir $WD\n",
@@ -49,7 +42,27 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Error in names(x) <- value : \n",
+      "  'names' attribute [4] must be the same length as the vector [0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Error in names(x) <- value : \n",
+      "  'names' attribute [4] must be the same length as the vector [0]\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "%%R\n",
     "experiments <- list.dirs(path = \"./Simulation_result\", full.names = TRUE, recursive = FALSE)\n",
@@ -244,204 +257,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: checking parameters...\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing all distances\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: preparing negative contrast...\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: estimating sigma...\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing 45 pair-wise distances...\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_1\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_2\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_3\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_2\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_3\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_3\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_4\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_5\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_6\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_7\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_8\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_8 vs mod_9\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: preparing Output...\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n",
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: pre-computing Kernel matrix...\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 610.5867\n",
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 607.4047\n",
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 612.3545\n",
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 100\n",
-       "[1] 49\n",
-       "[1] 615.89\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%R\n",
     "replicas <- as.list(unique(datadf[['Experiment']]))\n",
@@ -535,13 +351,21 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1] 100\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Error in print(length(peaks)) : object 'peaks' not found\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Error in print(length(peaks)) : object 'peaks' not found\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
+     ]
     }
    ],
    "source": [
