--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -11,14 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Process is terminated.\n"
+      "TensorFlow version: 1.10.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2019-06-13 17:00:15.076855: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n"
      ]
     }
    ],
@@ -42,27 +49,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Error in names(x) <- value : \n",
-      "  'names' attribute [4] must be the same length as the vector [0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Error in names(x) <- value : \n",
-      "  'names' attribute [4] must be the same length as the vector [0]\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%R\n",
     "experiments <- list.dirs(path = \"./Simulation_result\", full.names = TRUE, recursive = FALSE)\n",
@@ -257,7 +244,204 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: checking parameters...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing all distances\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: preparing negative contrast...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: estimating sigma...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing 45 pair-wise distances...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_1\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_2\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_3\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_4\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_0 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_2\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_3\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_4\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_1 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_3\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_4\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_2 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_4\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_3 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_5\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_4 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_6\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_5 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_7\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_6 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_8\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_7 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: computing distances for mod_8 vs mod_9\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: preparing Output...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n",
+      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: pre-computing Kernel matrix...\n",
+      "\n",
+      "  warnings.warn(x, RRuntimeWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 608.8189\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 609.1725\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 610.9403\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 100\n",
+       "[1] 49\n",
+       "[1] 613.0616\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%R\n",
     "replicas <- as.list(unique(datadf[['Experiment']]))\n",
@@ -351,27 +535,16 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Error in print(length(peaks)) : object 'peaks' not found\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/dhelekal/anaconda3/envs/py35v3/lib/python3.5/site-packages/rpy2/rinterface/__init__.py:145: RRuntimeWarning: Error in print(length(peaks)) : object 'peaks' not found\n",
-      "\n",
-      "  warnings.warn(x, RRuntimeWarning)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1] 100\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
-   "source": [
-    "%%R\n",
-    "print(length(peaks))"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
