--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -11,9 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TensorFlow version: 1.10.0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2019-06-25 15:15:14.513663: I tensorflow/core/platform/cpu_feature_guard.cc:141] Your CPU supports instructions that this TensorFlow binary was not compiled to use: SSE4.1 SSE4.2 AVX AVX2 FMA\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash\n",
     "export WD=./Simulation_result\n",
@@ -26,7 +41,7 @@
     "\n",
     "for CONFIG in $CONF/*.json\n",
     "do\n",
-    "    python3 $SCRIPT $CONFIG\n",
+    "    python3 $SCRIPT $CONFIG --intensity \"../intensity.json\"\n",
     "done"
    ]
   },
