--- a/Experiment_NB/Validation Experiment.ipynb
+++ b/Experiment_NB/Validation Experiment.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "for CONFIG in $CONF/*.json\n",
     "do\n",
-    "    python3 $SCRIPT $CONFIG --intensity \"../intensity.json\"\n",
+    "    python3 $SCRIPT $CONFIG --intensity\n",
     "done"
    ]
   },
